--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@pipecat-ai/client-js": "^1.5.0",
     "@pipecat-ai/client-react": "^1.1.0",
     "@pipecat-ai/daily-transport": "^1.5.0",
+    "@pipecat-ai/small-webrtc-transport": "^1.8.1",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
